[project]
name = "smart_signal"
version = "0.1.0"
description = "Adaptive traffic signal with AI perception and emergency preemption"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = [""]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"